--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.5.1",
+    "mysql2": "^3.5.2"
   }
 }
